# mpala

./: AUTHORS  Makefile.am  README.md  export_pi.sh  main.cpp
fusion/: MadgwickAHRS.c  MadgwickAHRS.h  Makefile.am  Makefile.in
src/: I2Cbus.cpp  I2Cbus.hpp  I2Cdevice.cpp  I2Cdevice.hpp  I2Cutils.cpp  I2Cutils.hpp  IMUListener.hpp  Makefile.am  Makefile.in  MathUtils.cpp  MathUtils.hpp  SimpleFilter.cpp  SimpleFilter.hpp  adxl345.cpp  adxl345.hpp  bmp085.cpp  bmp085.hpp  gy80.cpp  gy80.hpp  hmc5883l.cpp  hmc5883l.hpp  ky-040-listener.hpp  ky-040-manager.cpp  ky-040-manager.hpp  l3g4200d.cpp  l3g4200d.hpp  labels.hpp  landingPage.cpp  landingPage.hpp  livePage.cpp  livePage.hpp  mainView.cpp  mainView.hpp  mpalaApp.cpp  mpalaApp.hpp  mpalaConfig.cpp  mpalaConfig.hpp  settingsPage.cpp  settingsPage.hpp  singleEntry.cpp  (+6 more)
